--- a/style.css
+++ b/style.css
@@ -10,6 +10,29 @@ section{
     background-image: url(img/bgMAIN.png);
 }
 .mascot{
-    margin: 50px,65px;
-    padding: 45px,55px;
+   width: 90px;
+}
+.window{
+    background-color: #fff;
+}
+.window_header{
+    background-color:#D2D0F7 ;
+    padding: 15px 20px ;
+    display: flex;
+    gap: 9px;
+}
+.circle{
+    width: 22px ;
+    height: 22px ;
+    border:1px solid black;
+    border-radius: 50%;
+}
+.circle:nth-of-type(1){
+    background-color:#FF6A00;
+}
+.circle:nth-of-type(2){
+    background-color:#FFE603;
+}
+.circle:nth-of-type(3){
+    background-color:#04C800;
 }
