--- a/style.css
+++ b/style.css
@@ -36,3 +36,11 @@ section{
 .circle:nth-of-type(3){
     background-color:#04C800;
 }
+.name{
+font: width 792px;
+font:height 59px;
+
+}
+.desription{
+    
+}
