--- a/style.css
+++ b/style.css
@@ -130,3 +130,10 @@ header{
     top: 0px;
     width: 100%;
 }
+.about_card{
+
+}
+.section_tittle{
+    font-family: inter;
+    font-size: 80px;
+}
