--- a/style.css
+++ b/style.css
@@ -180,3 +180,11 @@ html {
     scroll-behavior: smooth;
 }
 
+@media(max-width:1000px){
+    .logo{
+        font-size: 40px;
+        }
+    .menu{
+        display: none;
+        }
+}
